# UDPT-Notification-Service

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
config/: __init__.py  database.py  database_utils.py  settings.py
resources/scripts/mongoDB/: V.0_0_0.js
resources/scripts/postgres/: V.0_0_0.sql  V.0_1_0.sql
resources/scripts/redis/: V.0_0_0.rdb
src/: main.py
src/controllers/: dispense_controller.py  front_controller.py  medicine_controller.py  notification_controller.py  prescription_controller.py  user_controller.py
src/dto/: __init__.py  dispense_dto.py  medicine_dto.py  notification_dto.py  pagination_dto.py  prescription_dto.py  user_dto.py
src/messaging/: appointment_handler.py  consumer.py  prescription_handler.py  rabbitmq_producer.py
src/models/: dispense.py  medicine.py  notification.py  prescription.py  user.py
src/repositories/: dispense_repository.py  medicine_repository.py  notification_repository.py  prescription_repository.py  user_repository.py
src/services/: dispense_service.py  medicine_service.py  notification_service.py  prescription_service.py  user_service.py
tests/: test_main.http
